--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ body{
     overflow-x: hidden;
     background-color: black;
 }
-nav{
+nav {
     width: 100%;
     height: 10vh;
-    position: sticky;
+    position: fixed;
+    top: 0;
+    backdrop-filter: blur(2px);
+    left: 0;
+    z-index: 999; 
 }
 .nav-container{
     width: 100%;
@@ -105,6 +109,7 @@ nav{
 section{
     width: 100%;
     height: 90vh;
+    padding-top: 10vh; 
 }
 .main-container{
     width: 100%;
